--- a/Views/Shared/_ContactDataCard.cshtml
+++ b/Views/Shared/_ContactDataCard.cshtml
@@ -60,7 +60,7 @@
             margin-left: 10px;
         }
 
-        .card-data-footer a {
+        .card-data-link {
             border-bottom: 2px solid #E1E2F3;
             margin-top: 10px;
             padding: 0 5px;
@@ -78,13 +78,12 @@
 
         .copy-container{
             width: 100%;
-            height: 21px;
             display: flex;
             align-items: center;
             justify-content: space-between;
             border-bottom: 2px solid #E1E2F3;
             margin-top: 10px;
-            padding: 0 5px;
+            padding: 0 5px 5px 5px;
             cursor: pointer;
         }
 
@@ -101,6 +100,7 @@
             justify-content: space-between;
             overflow-x: auto;
             overflow-y: hidden;
+            margin-bottom: 2px;
         }
 
             .scrollable span {
@@ -141,7 +141,7 @@
             <span>@Model.Initials</span>
         </a>
         <div class="card-data-footer">
-            <a href="@Url.Action("EnterpriseDetails","EnterpriseDetails", new { EntityId = Model.EnterpriseId})" class="card-data-link"><div class="scrollable" style="margin-bottom: 2px;"><span>@Model.EnterpriseNameUA</span></div></a>
+            <a href="@Url.Action("EnterpriseDetails","EnterpriseDetails", new { EntityId = Model.EnterpriseId})" class="card-data-link"><div class="scrollable"><span>@Model.EnterpriseNameUA</span></div></a>
             <div class="copy-container" onclick="copyToClipboard('@Model.PhoneNumber')"><span>@Model.PhoneNumber</span><img src="~/icons/Copy.svg" /></div>
             <div class="copy-container" onclick="copyToClipboard('@Model.Email')"><span>@Model.Email</span><img src="~/icons/Copy.svg" /></div>
         </div>
