--- a/Views/Shared/_Pagination.cshtml
+++ b/Views/Shared/_Pagination.cshtml
@@ -119,6 +119,7 @@
                                 SortAlphabetStreet = model.SortAlphabetStreet,
                                 SortEnterpriseId = model.SortEnterpriseId,
                                 SortAlphabetRegion = model.SortAlphabetRegion,
+                                IsSelectedEnterprises = model.IsSelectedEnterprises,
                                 CurrentPage = page,
                                 NumberItemsPerPage = Model.NumberItemsPerPage,
                                 TotalPageCount = Model.TotalPageCount
