--- a/Views/CatalogList/CatalogList.cshtml
+++ b/Views/CatalogList/CatalogList.cshtml
@@ -35,7 +35,7 @@
         .header-part-order {
             display: grid;
             grid-gap: 5px;
-            grid-template-columns: 10% 8% 53% 15% calc(14% - 13px);
+            grid-template-columns: 17% 8% 46% 15% calc(14% - 13px);
             padding-right: 13px;
         }
 
@@ -213,7 +213,7 @@
             grid-gap: 5px;
             display: grid;
             width: 100%;
-            grid-template-columns: 10% 8% 53% 15% calc(14% - 13px);
+            grid-template-columns: 17% 8% 46% 15% calc(14% - 13px);
             align-items: center;
             height: 23px;
             padding: 0 10px 0 10px;
@@ -276,6 +276,28 @@
                 background-color: #59CDFF;
             }
 
+        .percent-input-position {
+            background-color: white;
+            height: 18px;
+            width: 40px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border: 2px solid #E1E2F3;
+            border-radius: 3px;
+            color: #595586;
+            outline: none;
+            box-sizing: border-box;
+            text-align: center;
+            -moz-appearance: textfield;
+            font-size: 12px;
+        }
+
+            .percent-input-position::-webkit-inner-spin-button,
+            .percent-input-position::-webkit-outer-spin-button {
+                -webkit-appearance: none;
+                margin: 0;
+            }
     </style>
 </head>
 <body>
@@ -316,7 +338,7 @@
             @Html.ActionLink("Створити обладнання", "CatalogCreate", "CatalogCreate", null, new { @class = "add-btn-fullwidth" })
         }
         @{
-            string dataPageIdentifier = Model.OrderId != null || Model.WareHouseId != null ? "OrderWareHouseCatalogList" : "CatalogList";
+            string dataPageIdentifier = (Model.OrderId != null && Model.OrderId != 0) || (Model.WareHouseId != null && Model.WareHouseId != 0) ? "OrderWareHouseCatalogList" : "CatalogList";
         }
         <div class="content hidden" data-page-identifier="@dataPageIdentifier">
             <div class="header-container">
@@ -352,7 +374,7 @@
                     @if ((Model.OrderId != null && Model.OrderId != 0) || (Model.WareHouseId != null && Model.WareHouseId != 0))
                     {
                         <div class="header-part-column">
-                            @await Html.PartialAsync("_Resizer", new ResizerViewModel { TitleName = "Додати" })
+                            @await Html.PartialAsync("_Resizer", new ResizerViewModel { TitleName = "Додати, шт" })
                         </div>
                     }
                     <div class="header-part-column">
@@ -370,7 +392,7 @@
                     <div class="header-part-column">
                         @await Html.PartialAsync("_Resizer", new ResizerViewModel { TitleName = "Прайс", SortActionName = "CatalogList", SortControllerName = "CatalogList", SortRouteValues = CreateViewModelWithSort(null, null, true, null, null) })
                     </div>
-                    @if(!(Model.OrderId != null || Model.WareHouseId != null))
+                    @if (!(Model.OrderId != null && Model.OrderId != 0) || (Model.WareHouseId != null && Model.WareHouseId != 0))
                     {
                         <div class="header-part-column">
                             @await Html.PartialAsync("_Resizer", new ResizerViewModel { TitleName = "Вага", SortActionName = "CatalogList", SortControllerName = "CatalogList", SortRouteValues = CreateViewModelWithSort(null, null, null, true, null) })
@@ -458,7 +480,7 @@
                         JoinSearches("FilterBasePrice");
                         <input type="submit" style="visibility: hidden; position: absolute;" />
                     }
-                    @if (!(Model.OrderId != null || Model.WareHouseId != null))
+                    @if (!(Model.OrderId != null && Model.OrderId != 0) || (Model.WareHouseId != null && Model.WareHouseId != 0))
                     {
                         @using (Html.BeginForm("CatalogList", "CatalogList", FormMethod.Get, new { @class = "range-container" }))
                         {
@@ -478,23 +500,82 @@
                 </div>
             </div>
             <div class="cards-container">
+            
                 @foreach (var entity in Model.Entities)
                 {
                     var className = (Model.OrderId != null && Model.OrderId != 0) || (Model.WareHouseId != null && Model.WareHouseId != 0) ? "card-data-order" : "card-data";
                     <div class="@className">
                         @if (Model.OrderId != null && Model.OrderId != 0)
                         {
-                            <div style="width: 100%; display: flex; align-items: center; justify-content: center;">
-                                @Html.ActionLink("Додати", "OrderAddEquipment", "OrderAddEquipment", new{ OrderId = Model.OrderId, EquipmentCatalogPositionId = entity.EquipmentCatalogPositionId, SearchGeneral = Model.SearchGeneral, SearchEquipmentCode = Model.SearchEquipmentCode, SearchName = Model.SearchName, FilterType = Model.FilterType, FilterMinBasePrice = Model.FilterMinBasePrice, FilterMaxBasePrice = Model.FilterMaxBasePrice, FilterMinWeight = Model.FilterMinWeight, FilterMaxWeight = Model.FilterMaxWeight, FilterMinVolume = Model.FilterMinVolume, FilterMaxVolume = Model.FilterMaxVolume, SortCode = Model.SortCode, SortAlphabetNameEN = Model.SortAlphabetNameEN, SortPrice = Model.SortPrice, SortWeight = Model.SortWeight, SortVolume = Model.SortVolume, CurrentPage = Model.CurrentPage
-                        }, new{ @class = "add-btn-empty", style = "height: 18px; font-size: 10px; margin: 0 20px; max-width: 100px;"})
-                            </div>
+                            @using (Html.BeginForm("OrderAddEquipment", "OrderAddEquipment", FormMethod.Post, new { style = "display: flex; justify-content: center; align-items: center; flex-direction: row; width: 100%;" }))
+                            {
+                                @if(entity.Quantity > 0)
+                                {
+                                    <input type="submit" value="Замінити" class="add-btn" style="height: 18px; margin: 0 10px; padding: 0 20px;">
+                                }
+                                else
+                                {
+                                    <input type="submit" value="Додати" class="add-btn-empty" style="height: 18px; margin: 0 10px; padding: 0 25px;">
+                                }
+                                @Html.Hidden("OrderId", Model.OrderId)
+                                @Html.Hidden("EquipmentCatalogPositionId", entity.EquipmentCatalogPositionId)
+                                @Html.Hidden("SearchGeneral", Model.SearchGeneral)
+                                @Html.Hidden("SearchEquipmentCode", Model.SearchEquipmentCode)
+                                @Html.Hidden("SearchName", Model.SearchName)
+                                @Html.Hidden("FilterType", Model.FilterType)
+                                @Html.Hidden("FilterMinBasePrice", Model.FilterMinBasePrice)
+                                @Html.Hidden("FilterMaxBasePrice", Model.FilterMaxBasePrice)
+                                @Html.Hidden("FilterMinWeight", Model.FilterMinWeight)
+                                @Html.Hidden("FilterMaxWeight", Model.FilterMaxWeight)
+                                @Html.Hidden("FilterMinVolume", Model.FilterMinVolume)
+                                @Html.Hidden("FilterMaxVolume", Model.FilterMaxVolume)
+                                @Html.Hidden("SortCode", Model.SortCode)
+                                @Html.Hidden("SortAlphabetNameEN", Model.SortAlphabetNameEN)
+                                @Html.Hidden("SortPrice", Model.SortPrice)
+                                @Html.Hidden("SortWeight", Model.SortWeight)
+                                @Html.Hidden("SortVolume", Model.SortVolume)
+                                @Html.Hidden("CurrentPage", Model.CurrentPage)
+                                <div style="display: flex; align-items: center; justify-content: center; gap: 5px;">
+                                    @Html.TextBox("Quantity", entity.Quantity, new { @class = "percent-input-position", required = "required", type = "number", min = "1", step = "1", pattern = "[0-9]*" })
+                                    <span>шт</span>
+                                </div>
+                            }
                         }
                         else if (Model.WareHouseId != null && Model.WareHouseId != 0)
                         {
-                            <div style="width: 100%; display: flex; align-items: center; justify-content: center;">
-                                @Html.ActionLink("Додати", "WareHouseAddEquipment", "WareHouseAddEquipment", new{ WareHouseId = Model.WareHouseId, EquipmentCatalogPositionId = entity.EquipmentCatalogPositionId, SearchGeneral = Model.SearchGeneral, SearchEquipmentCode = Model.SearchEquipmentCode, SearchName = Model.SearchName, FilterType = Model.FilterType, FilterMinBasePrice = Model.FilterMinBasePrice, FilterMaxBasePrice = Model.FilterMaxBasePrice, FilterMinWeight = Model.FilterMinWeight, FilterMaxWeight = Model.FilterMaxWeight, FilterMinVolume = Model.FilterMinVolume, FilterMaxVolume = Model.FilterMaxVolume, SortCode = Model.SortCode, SortAlphabetNameEN = Model.SortAlphabetNameEN, SortPrice = Model.SortPrice, SortWeight = Model.SortWeight, SortVolume = Model.SortVolume, CurrentPage = Model.CurrentPage
-                        }, new{ @class = "add-btn-empty", style = "height: 18px; font-size: 10px; margin: 0 20px; max-width: 100px;"})
-                            </div>
+                            @using (Html.BeginForm("WareHouseAddEquipment", "WareHouseAddEquipment", FormMethod.Post, new { style = "display: flex; justify-content: center; align-items: center; flex-direction: row; width: 100%;" }))
+                            {
+                                @if(entity.Quantity > 0)
+                                {
+                                    <input type="submit" value="Додано" class="add-btn" style="height: 18px; margin: 0 10px; padding: 0 20px;">
+                                }
+                                else
+                                {
+                                    <input type="submit" value="Додати" class="add-btn-empty" style="height: 18px; margin: 0 10px; padding: 0 25px;">
+                                }
+                                @Html.Hidden("WareHouseId", Model.WareHouseId)
+                                @Html.Hidden("EquipmentCatalogPositionId", entity.EquipmentCatalogPositionId)
+                                @Html.Hidden("SearchGeneral", Model.SearchGeneral)
+                                @Html.Hidden("SearchEquipmentCode", Model.SearchEquipmentCode)
+                                @Html.Hidden("SearchName", Model.SearchName)
+                                @Html.Hidden("FilterType", Model.FilterType)
+                                @Html.Hidden("FilterMinBasePrice", Model.FilterMinBasePrice)
+                                @Html.Hidden("FilterMaxBasePrice", Model.FilterMaxBasePrice)
+                                @Html.Hidden("FilterMinWeight", Model.FilterMinWeight)
+                                @Html.Hidden("FilterMaxWeight", Model.FilterMaxWeight)
+                                @Html.Hidden("FilterMinVolume", Model.FilterMinVolume)
+                                @Html.Hidden("FilterMaxVolume", Model.FilterMaxVolume)
+                                @Html.Hidden("SortCode", Model.SortCode)
+                                @Html.Hidden("SortAlphabetNameEN", Model.SortAlphabetNameEN)
+                                @Html.Hidden("SortPrice", Model.SortPrice)
+                                @Html.Hidden("SortWeight", Model.SortWeight)
+                                @Html.Hidden("SortVolume", Model.SortVolume)
+                                @Html.Hidden("CurrentPage", Model.CurrentPage)
+                                <div style="display: flex; align-items: center; justify-content: center; gap: 5px;">
+                                    @Html.TextBox("Quantity", entity.Quantity, new { @class = "percent-input-position", required = "required", type = "number", min = "1", step = "1", pattern = "[0-9]*" })
+                                    <span>шт</span>
+                                </div>
+                            }
                         }
                         <span>@entity.EquipmentCode</span>
                         <a class="scrollable" href="@Url.Action("CatalogDetails","CatalogDetails", new { EntityId = entity.EquipmentCatalogPositionId})"><span>@entity.NameEN</span></a>
@@ -515,7 +596,7 @@
                             }
                         </span>
                         <span>@entity.BasePrice.ToString("0.00") £</span>
-                        @if (!(Model.OrderId != null || Model.WareHouseId != null))
+                        @if (!(Model.OrderId != null && Model.OrderId != 0) || (Model.WareHouseId != null && Model.WareHouseId != 0))
                         {
                             <span>@entity.Weight кг</span>
                             <span>@entity.Volume м³</span>
