--- a/Views/WareHouseDetails/WareHouseDetails.cshtml
+++ b/Views/WareHouseDetails/WareHouseDetails.cshtml
@@ -343,7 +343,7 @@
                                 <a href="@Url.ActionLink("CatalogDetails", "CatalogDetails", new { EntityId = entity.EquipmentCatalogPositionId})" class="scrollable"><span>@entity.NameUA</span></a>
                                 <span>@entity.BasePrice £</span>
                                 <span style="display: flex; gap: 5px; justify-content: center;">
-                                    @Html.ActionLink("—", "WareHouseEquipmentRemove", "WareHouseEquipmentRemove", new { WareHouseId = Model.WareHouseId, EquipmentWareHousePositionId = entity.EquipmentWareHousePositionId, SearchGeneral = Model.SearchGeneral, CurrentPage = Model.CurrentPage }, new { @class="action-link-symbol" })
+                                    @Html.ActionLink("-", "WareHouseEquipmentRemove", "WareHouseEquipmentRemove", new { WareHouseId = Model.WareHouseId, EquipmentWareHousePositionId = entity.EquipmentWareHousePositionId, SearchGeneral = Model.SearchGeneral, CurrentPage = Model.CurrentPage }, new { @class="action-link-symbol" })
                                     @entity.Quantity шт
                                     @Html.ActionLink("+", "WareHouseEquipmentAdd", "WareHouseEquipmentAdd", new { WareHouseId = Model.WareHouseId, EquipmentWareHousePositionId = entity.EquipmentWareHousePositionId, SearchGeneral = Model.SearchGeneral, CurrentPage = Model.CurrentPage }, new { @class = "action-link-symbol" })
                                 </span>
