--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -474,7 +474,7 @@
     <div class="page-container">
         <div style="display: flex; flex-direction: row; align-items: center;">
             <div style="height: 30px; margin-bottom: 10px; align-items: center; width: 100%;">
-                <span style="color: #595586; font-size: 18px; font-weight: bold;">Головна - Welcome to Stimex Engineering Group CRM</span>
+                <span style="color: #595586; font-size: 18px; font-weight: bold;">Головна - Stimex Engineering Group CRM (fixes - 22.08/13:14)</span>
             </div>
             <div style="height: 30px; margin-bottom: 10px; display: flex; justify-content: end; align-items: center; width: 200px;">
                 <span style="color: #595586; font-size: 14px; font-weight: bold;">Вітаємо, @Model.UserName!</span>
